# dmd-biomechanics

./: README.md  activation.py  body-position1.json  body.py  body1.json  environment.py  main.py  sim_c_util.c  simulation.py  test.py  util.py
RL/: playback.py  train.py
biomechanical-model/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
biomechanical-model/src/zxy9_biomechanical_model/: sim_c_util.c  simulation.py
biomechanical-model/src/zxy9_biomechanical_model/inputs/bat/: body.json  start-position.json
biomechanical-model/src/zxy9_biomechanical_model/inputs/human/: .body.json.swp  start-position.json
biomechanical-model/src/zxy9_biomechanical_model/sim_c_helper/: .math_helper.c.swp  Sim_Entry_Object.c  Sim_Entry_Type.c  math_helper.c  numpy_helper.c
biomechanical-model/src/zxy9_biomechanical_model/sim_py_util/: body.py  json_util.py
future-inputs/: env1.json
human-inputs/: body.json  start-position.json
inputs/human/: activation.json  body.json  start-position.json
sim_c_helper/: Sim_Entry_Type.c  math_helper.c  numpy_helper.c
sim_py_util/: __init__.py  body.py
test-inputs/: activation.json  body.json  position.json
verification/: verify-momentum.py  verify-segments.py
verification/verification-inputs/mm/: body.json
verification/verification-inputs/segments/: body.json  start-position.json
