[build-system]
requires = ["setuptools >= 61.0", "numpy >= 2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zxy9_biomechanical_model"
version = "0.0.7"
authors = [
  { name="Sam Liepke", email="samliepke@gmail.com" },
]
description = "A 2d biomechanical model of human motion. Or, the motion of some other kind of animal / robot / thing, if its motion is close enough to 2d and you can find the parameter values for it."
dependencies = [
    "numpy", "gymnasium"
]

[tool.setuptools.packages.find]
where = ["src"]
